       you want to use the working copy as the source or
       just to a repo->repo copy. (Stefan)
- ADD: If the "check for updates" can't connect to the
       repository, just show the local status. (Stefan)
- ADD: The "Add to ignore list" now has a submenu with
       the filename and the filemask (e.g. "*.tmp")
       as its entries. (Stefan)
- CHG: The Repository Browser now sorts the date column
       by the real date, not the text. (Stefan)
- BUG: Authentication when viewing remote properties lead
       to a crash. (Stefan)
- BUG: Even if no entries are added to the right-drag context
       menu, the separator still was added. (Stefan)
- BUG: TortoiseMerge could crash when parsing invalid, corrupted
       or unsupported patchfiles. (Stefan)

Version 1.0.8
- CHG: The OK button in the commit dialog is enabled by default,
       the default minimum logsize is now zero. (Stefan)
- BUG: Some IE proxy settings weren't used correctly. This
       lead to TSVN not able to connect to repositories. (Stefan)

Version 1.0.7
- ADD: in the "check for updates" dialog a new
       context menu command to show the log. (Stefan)
- ADD: New option to specify the minimum size of a
       log message. (Stefan)
- ADD: It's possible to turn off the context menu
       icons completely with a registry setting. (Stefan)
- ADD: Performance is now much better throughout the
       whole application. (Stefan)
- ADD: Merging of two instead of just one URL. (Stefan)
- ADD: Paths with short filenames now work too when
       starting TortoiseProc from external programs. (Stefan)
- ADD: Comparing an older revision with the working copy
       on folders. TME is started for this in patch mode
       to avoid "ugly" unified diffs. (Stefan)
- ADD: TortoiseMerge can now resolve a conflicted file
       in Subversion automatically when saving. (Stefan)
- ADD: In the log dialog you now can select log messages
       and copy them to the clipboard. (Stefan)